[build-system]
requires = ["setuptools>=75.7.0", "wheel", "numpy>=2.3.4", "cython>=3.0.12"]
build-backend = "setuptools.build_meta"

[project]
name = "hummingbot"
version = "2.10.0"
description = "Hummingbot - Open source crypto trading bot"
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "Apache-2.0"}
authors = [
    {name = "Hummingbot Foundation", email = "dev@hummingbot.org"},
]
keywords = ["crypto", "trading", "bot", "market-making", "arbitrage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.2",
    "asyncssh>=2.13.2",
    "aioprocessing>=2.0.1",
    "aioresponses>=0.7.4",
    "aiounittest>=1.4.2",
    "async-timeout>=4.0.2,<5",
    "bidict>=0.22.1",
    "bip-utils",
    "cachetools>=5.3.1",
    "commlib-py>=0.11",
    "cryptography>=46.0.3",
    "eth-account>=0.13.0",
    "msgpack-python",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "objgraph",
    "pandas>=2.3.3",
    "prompt_toolkit>=3.0.39",
    "protobuf>=4.23.3",
    "psutil>=5.9.5",
    "pydantic>=2.12.4",
    "pyjwt>=2.3.0",
    "pyperclip>=1.8.2",
    "requests>=2.32.5",
    "ruamel.yaml>=0.2.5",
    "safe-pysha3",
    "scalecodec",
    "scipy>=1.16.3",
    "six>=1.16.0",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
    "TA-Lib>=0.6.4",
    "tqdm>=4.67.1",
    "ujson>=5.7.0",
    "urllib3>=1.26.15,<2.0",
    "web3",
    "xrpl-py>=4.1.0",
    "PyYaml>=0.2.5",
]

[project.optional-dependencies]
injective = [
    "injective-py",
]

[project.urls]
Homepage = "https://github.com/hummingbot/hummingbot"
Documentation = "https://docs.hummingbot.org"
Repository = "https://github.com/hummingbot/hummingbot"

[project.scripts]
hummingbot_quickstart = "bin.hummingbot_quickstart:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
conda_env = "hummingbot"
filter_files = true
skip = ["setup.py"]
